fix image issue

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body class="position-relative no-scroll">
     <!-- SPLASH SCREEN -->
     <div id="splash-screen" class="splash-screen">
-      <img src="../public/logo.webp" alt="logo" />
+      <img src="./public/logo.webp" alt="logo" />
       <h1>معهد الإدارة العامة</h1>
       <p>اهلا بك 😊</p>
     </div>
@@ -66,7 +66,7 @@
         class="container navbar d-flex align-items-center justify-content-between position-relative h-fit fw-bold"
       >
         <!-- LOGO -->
-        <img src="../public/logo.webp" alt="اعمال" class="ms-2 ms-lg-0" />
+        <img src="./public/logo.webp" alt="اعمال" class="ms-2 ms-lg-0" />
 
         <!-- NAV LINKS -->
         <div class="nav-links d-flex align-items-center gap-4">
@@ -101,7 +101,7 @@
       </nav>
       <div id="drawer" class="drawer">
         <div class="p-3 text-center">
-          <img src="../public/logo.webp" alt="اعمال" />
+          <img src="./public/logo.webp" alt="اعمال" />
         </div>
 
         <ul>
@@ -172,7 +172,7 @@
           class="container d-flex gap-5 align-items-center justify-content-center"
         >
           <div class="about-img">
-            <img src="../public/about.webp" loading="lazy" alt="about" />
+            <img src="./public/about.webp" loading="lazy" alt="about" />
           </div>
           <div class="flex-grow-1 mw-md-50" style="width: 100%">
             <div class="section-heading text-md-start">
@@ -246,7 +246,7 @@
             <div class="lastNews-section-cards">
               <div class="card p-0 mb-3 position-relative">
                 <img
-                  src="../public/news/news1.webp"
+                  src="./public/news/news1.webp"
                   class="card-img-top"
                   alt="news"
                   loading="lazy"
@@ -269,7 +269,7 @@
               </div>
               <div class="card p-0 mb-3 position-relative">
                 <img
-                  src="../public/news/news2.webp"
+                  src="./public/news/news2.webp"
                   class="card-img-top"
                   alt="news"
                   loading="lazy"
@@ -292,7 +292,7 @@
               </div>
               <div class="card p-0 mb-3 position-relative">
                 <img
-                  src="../public/news/news3.webp"
+                  src="./public/news/news3.webp"
                   class="card-img-top"
                   alt="news"
                   loading="lazy"
