add close drawer after link clicked

--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
           </button>
         </div>
       </nav>
+
+      <!-- DRAWER -->
       <div id="drawer" class="drawer">
         <div class="p-3 text-center">
           <img src="./public/logo.webp" alt="اعمال" />
         </div>
 
-        <ul>
+        <ul id="drawer-close">
           <li><a href="#">الرئيسية</a></li>
           <li><a href="#about-section">عن المعهد</a></li>
           <li><a href="#certifications-section">الشهادات الإحترافية</a></li>
