--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
     <!-- FOOTER -->
     <footer class="footer section-padding">
-      <div class="container">
+      <div class="container text-center text-md-start">
         <div class="row">
           <div class="col-md-3 my-3">
             <h5>تصفح</h5>
@@ -334,7 +334,9 @@
               <li><a href="#">إتصل بنا</a></li>
               <li><a href="#">الأخبار</a></li>
             </ul>
-            <div class="social-icons d-flex mt-3">
+            <div
+              class="social-icons d-flex gap-2 mt-3 justify-content-center justify-content-md-start"
+            >
               <a href="#"><i class="fab fa-linkedin"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
               <a href="#"><i class="fab fa-facebook"></i></a>
