fix images loading issue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- LOGO -->
-    <link rel="icon" type="image/svg+xml" href="./logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>اعمال | معهد الإدارة العامة</title>
 
@@ -615,11 +615,11 @@ c0 35 -5 48 -22 60 -25 18 -29 19 -44 8z"
           <div class="col-md-3 my-3">
             <h5>تصفح</h5>
             <ul class="list-unstyled">
-              <li><a href="#">الرئيسية</a></li>
-              <li><a href="#">عنا</a></li>
-              <li><a href="#">ميديا</a></li>
-              <li><a href="#">إتصل بنا</a></li>
-              <li><a href="#">الأخبار</a></li>
+              <li><a aria-label="Home" href="#">الرئيسية</a></li>
+              <li><a aria-label="About" href="#">عنا</a></li>
+              <li><a aria-label="Library" href="#">ميديا</a></li>
+              <li><a aria-label="Contact" href="#">إتصل بنا</a></li>
+              <li><a aria-label="News" href="#">الأخبار</a></li>
             </ul>
             <div
               class="social-icons d-flex gap-2 mt-3 justify-content-center justify-content-md-start"
@@ -666,7 +666,7 @@ c0 35 -5 48 -22 60 -25 18 -29 19 -44 8z"
             </p>
           </div>
           <div class="col-md-3 my-3">
-            <img src="./logo.webp" alt="Logo" class="img-fluid mb-3" />
+            <img src="./public/logo.webp" alt="Logo" class="img-fluid mb-3" />
             <p>لدينا الكثير من الشهادات الاحترافية والبرامج المتعددة</p>
           </div>
         </div>
