fix images loading issue

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ c0 35 -5 48 -22 60 -25 18 -29 19 -44 8z"
         aria-label="Main Navigation"
       >
         <!-- LOGO -->
-        <img src="./logo.webp" alt="اعمال" class="ms-2 ms-lg-0" />
+        <img src="./public/logo.webp" alt="اعمال" class="ms-2 ms-lg-0" />
 
         <!-- NAV LINKS -->
         <div class="nav-links d-flex align-items-center gap-4">
@@ -334,7 +334,7 @@ c0 35 -5 48 -22 60 -25 18 -29 19 -44 8z"
       <!-- DRAWER -->
       <div role="dialog" aria-modal="true" id="drawer" class="drawer">
         <div class="p-3 text-center">
-          <img src="./logo.webp" alt="اعمال" />
+          <img src="./public/logo.webp" alt="اعمال" />
         </div>
 
         <ul id="drawer-close">
@@ -441,7 +441,7 @@ c0 35 -5 48 -22 60 -25 18 -29 19 -44 8z"
           class="container d-flex gap-5 align-items-center justify-content-center"
         >
           <div class="about-img">
-            <img src="./about.webp" loading="lazy" alt="about" />
+            <img src="./public/about.webp" loading="lazy" alt="about" />
           </div>
           <div class="flex-grow-1 mw-md-50" style="width: 100%">
             <div class="section-heading text-md-start">
@@ -526,7 +526,7 @@ c0 35 -5 48 -22 60 -25 18 -29 19 -44 8z"
             <div class="lastNews-section-cards">
               <div class="card p-0 mb-3 position-relative">
                 <img
-                  src="./news/news1.webp"
+                  src="./public/news/news1.webp"
                   class="card-img-top"
                   alt="news"
                   loading="lazy"
@@ -552,7 +552,7 @@ c0 35 -5 48 -22 60 -25 18 -29 19 -44 8z"
               </div>
               <div class="card p-0 mb-3 position-relative">
                 <img
-                  src="./news/news2.webp"
+                  src="./public/news/news2.webp"
                   class="card-img-top"
                   alt="news"
                   loading="lazy"
@@ -578,7 +578,7 @@ c0 35 -5 48 -22 60 -25 18 -29 19 -44 8z"
               </div>
               <div class="card p-0 mb-3 position-relative">
                 <img
-                  src="./news/news3.webp"
+                  src="./public/news/news3.webp"
                   class="card-img-top"
                   alt="news"
                   loading="lazy"
