--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- LOGO -->
     <link rel="icon" type="image/svg+xml" href="./public/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="معهد الإدارة العامة" />
     <title>اعمال | معهد الإدارة العامة</title>
 
     <style>
@@ -296,7 +297,6 @@ c0 35 -5 48 -22 60 -25 18 -29 19 -44 8z"
             <button
               aria-label="Globe to change language"
               type="button"
-              role="switch"
               class="btn btn-outline-primary d-flex justify-content-center align-items-center"
             >
               <i aria-hidden="true" class="fa-solid fa-globe fs-5"></i>
@@ -332,7 +332,7 @@ c0 35 -5 48 -22 60 -25 18 -29 19 -44 8z"
       </nav>
 
       <!-- DRAWER -->
-      <div role="dialog" aria-modal="true" id="drawer" class="drawer">
+      <div id="drawer" class="drawer">
         <div class="p-3 text-center">
           <img src="./public/logo.webp" alt="اعمال" />
         </div>
